<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:text="@string/my_nanodegree_appz" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spotify_streamer"
        android:id="@+id/buttonSpotify"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/textView"
        android:layout_alignLeft="@+id/buttonCapstone"
        android:layout_alignStart="@+id/buttonCapstone"
        android:background="#F08C35"
        android:layout_alignRight="@+id/buttonCapstone"
        android:layout_alignEnd="@+id/buttonCapstone" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scores_app"
        android:id="@+id/buttonScores"
        android:layout_below="@+id/buttonSpotify"
        android:layout_marginTop="5dp"
        android:layout_alignRight="@+id/buttonSpotify"
        android:layout_alignEnd="@+id/buttonSpotify"
        android:layout_alignLeft="@+id/buttonSpotify"
        android:layout_alignStart="@+id/buttonSpotify"
        android:background="#F08C35" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/library_app"
        android:id="@+id/buttonLibrary"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/buttonScores"
        android:layout_alignRight="@+id/buttonScores"
        android:layout_alignEnd="@+id/buttonScores"
        android:layout_alignLeft="@+id/buttonScores"
        android:layout_alignStart="@+id/buttonScores"
        android:background="#F08C35" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/build_bigger"
        android:id="@+id/buttonBuildIt"
        android:layout_below="@+id/buttonLibrary"
        android:layout_marginTop="5dp"
        android:layout_alignLeft="@+id/buttonLibrary"
        android:layout_alignStart="@+id/buttonLibrary"
        android:layout_alignRight="@+id/buttonLibrary"
        android:layout_alignEnd="@+id/buttonLibrary"
        android:background="#F08C35" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/xyz_reader"
        android:id="@+id/buttonXYZ"
        android:layout_below="@+id/buttonBuildIt"
        android:layout_marginTop="5dp"
        android:layout_alignRight="@+id/buttonBuildIt"
        android:layout_alignEnd="@+id/buttonBuildIt"
        android:layout_alignLeft="@+id/buttonBuildIt"
        android:layout_alignStart="@+id/buttonBuildIt"
        android:background="#F08C35" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/capstone_myapp"
        android:id="@+id/buttonCapstone"
        android:layout_below="@+id/buttonXYZ"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"
        android:background="#ffff1012" />

</RelativeLayout>
